Dashes to hyphens (L--) in abstracts & titles

--- a/References/References.bib
+++ b/References/References.bib
@@ -6,7 +6,7 @@
 	shorttitle = {L to {H} mode transition},
 	url = {http://stacks.iop.org/0029-5515/55/i=7/a=073015},
 	doi = {10.1088/0029-5515/55/7/073015},
-	abstract = {The L to H mode transition occurs at a critical power which depends on various parameters, such as the magnetic field, the density, etc. Experimental evidence on various tokamaks (JET, ASDEX-Upgrade, DIII-D, Alcator C-Mod) points towards the existence of a critical temperature characterizing the transition. This criterion for the L-H transition is local and is therefore easier to be compared to theoretical approaches. In order to shed light on the mechanisms of the transition, simple theoretical ideas are used to derive a temperature threshold ( T th ). They are based on the stabilization of the underlying turbulence by a mean radial electric field shear. The nature of the turbulence varies as the collisionality decreases, from resistive ballooning modes to ion temperature gradient and trapped electron modes. The obtained parametric dependencies of the derived T th are tested versus magnetic field, density, effective charge. Various robust experimental observations are reproduced, in particular T th increases with magnetic field B and increases with density below the density roll-over observed on the power threshold.},
+	abstract = {The L to H mode transition occurs at a critical power which depends on various parameters, such as the magnetic field, the density, etc. Experimental evidence on various tokamaks (JET, ASDEX-Upgrade, DIII-D, Alcator C-Mod) points towards the existence of a critical temperature characterizing the transition. This criterion for the L--H transition is local and is therefore easier to be compared to theoretical approaches. In order to shed light on the mechanisms of the transition, simple theoretical ideas are used to derive a temperature threshold ( T th ). They are based on the stabilization of the underlying turbulence by a mean radial electric field shear. The nature of the turbulence varies as the collisionality decreases, from resistive ballooning modes to ion temperature gradient and trapped electron modes. The obtained parametric dependencies of the derived T th are tested versus magnetic field, density, effective charge. Various robust experimental observations are reproduced, in particular T th increases with magnetic field B and increases with density below the density roll-over observed on the power threshold.},
 	language = {en},
 	number = {7},
 	urldate = {2017-08-07},
@@ -40,7 +40,7 @@
 	issn = {0741-3335},
 	url = {http://stacks.iop.org/0741-3335/44/i=5A/a=345},
 	doi = {10.1088/0741-3335/44/5A/345},
-	abstract = {The International Global H-mode Threshold Database has been revised and cleaned from inadequate data for some tokamaks. This significantly reduces the scatter for the corresponding datasets. The resulting new analyses including all ten tokamaks yields results comparable to previous work. In this case, the uncertainties are essentially determined by the inability of the linear models to take the different dependencies into account with sufficient accuracy. However, restricting the database to a more homogeneous subset of medium and large size tokamaks with single-null elongated plasma shapes yields expressions with much lower scatter. In this case the contribution from the experimental scatter in the individual machines plays a role. These regressions are stable against excluding one tokamak in turn.},
+	abstract = {The International Global H--mode Threshold Database has been revised and cleaned from inadequate data for some tokamaks. This significantly reduces the scatter for the corresponding datasets. The resulting new analyses including all ten tokamaks yields results comparable to previous work. In this case, the uncertainties are essentially determined by the inability of the linear models to take the different dependencies into account with sufficient accuracy. However, restricting the database to a more homogeneous subset of medium and large size tokamaks with single-null elongated plasma shapes yields expressions with much lower scatter. In this case the contribution from the experimental scatter in the individual machines plays a role. These regressions are stable against excluding one tokamak in turn.},
 	language = {en},
 	number = {5A},
 	urldate = {2017-08-07},
@@ -68,7 +68,7 @@
 
 @article{arnoux_how_2009,
 	edition = {86},
-	title = {How {Fritz} {Wagner} `discovered' the {H}-mode},
+	title = {How {Fritz} {Wagner} `discovered' the {H}--mode},
 	url = {http://www.iter.org/newsline/86/659},
 	urldate = {2017-08-07},
 	journal = {ITER Newsline},
@@ -85,7 +85,7 @@
 	url = {http://adsabs.harvard.edu/abs/2016PhyD..331...13D},
 	doi = {10.1016/j.physd.2016.05.008},
 	abstract = {Experiments in tokamaks (nuclear fusion reactors) have shown two modes 
-of operation: L-mode and H-mode. Transitions between these two modes
+of operation: L--mode and H--mode. Transitions between these two modes
 have been observed in three types: sharp, smooth and oscillatory. The
 same modes of operation and transitions between them have been observed
 in simplified transport models of the fusion plasma in one spatial
@@ -100,7 +100,7 @@ detected. However, when these techniques are applied to the transport
 model, we detect a degenerate Bogdanov-Takens bifurcation of codimension
 4. The nearby 1- and 2-parameter slices are in agreement with the
 presence of this codimension-4 degenerate Bogdanov-Takens bifurcation,
-and all three types of L-H transitions can be recognized in these
+and all three types of L--H transitions can be recognized in these
 slices. The same codimension-4 situation is observed under variation of
 the additional parameters in the model, and under some modifications of
 the model.},
@@ -109,7 +109,7 @@ the model.},
 	author = {Veldman, D. W. M. and de Blank, H. J. and Pekkér, M. J. and Kuznetsov, Yu. A.},
 	month = sep,
 	year = {2016},
-	keywords = {Bifurcations theory, L-H transition, Large-scale systems, MATLAB, Numerical continuation},
+	keywords = {Bifurcations theory, L--H transition, Large-scale systems, MATLAB, Numerical continuation},
 	pages = {13--26}
 }
 
@@ -165,7 +165,7 @@ the model.},
 	volume = {67},
 	url = {https://link.aps.org/doi/10.1103/PhysRevLett.67.2485},
 	doi = {10.1103/PhysRevLett.67.2485},
-	abstract = {A model of edge localized modes in tokamak plasmas is presented. A limit-cycle solution is found in the transport equation (time-dependent Ginzburg-Landau type), which has a hysteresis curve for the gradient versus the flux. A periodic oscillation of the particle outflux and an L-H intermediate state are predicted near the L-H transition boundary. A mesophase in spatial structure appears near the edge.},
+	abstract = {A model of edge localized modes in tokamak plasmas is presented. A limit-cycle solution is found in the transport equation (time-dependent Ginzburg-Landau type), which has a hysteresis curve for the gradient versus the flux. A periodic oscillation of the particle outflux and an L--H intermediate state are predicted near the L--H transition boundary. A mesophase in spatial structure appears near the edge.},
 	number = {18},
 	urldate = {2017-07-27},
 	journal = {Physical Review Letters},
@@ -180,7 +180,7 @@ the model.},
 	volume = {60},
 	url = {https://link.aps.org/doi/10.1103/PhysRevLett.60.2276},
 	doi = {10.1103/PhysRevLett.60.2276},
-	abstract = {A new model of L- to H-mode transition in tokamak plasmas is presented. Nonambipolar particle losses determine the consistent radial electric field near plasma periphery. A "cusp-type catastrophe" among the radial electric field, particle flux, and edge gradients is found. At the transition, plasma loss can take multiple values for one profile of density and temperature near the edge. A critical edge condition for the transition is obtained.},
+	abstract = {A new model of L-- to H--mode transition in tokamak plasmas is presented. Nonambipolar particle losses determine the consistent radial electric field near plasma periphery. A "cusp-type catastrophe" among the radial electric field, particle flux, and edge gradients is found. At the transition, plasma loss can take multiple values for one profile of density and temperature near the edge. A critical edge condition for the transition is obtained.},
 	number = {22},
 	urldate = {2017-07-27},
 	journal = {Physical Review Letters},
@@ -195,7 +195,7 @@ the model.},
 	volume = {72},
 	url = {https://link.aps.org/doi/10.1103/PhysRevLett.72.222},
 	doi = {10.1103/PhysRevLett.72.222},
-	abstract = {The dynamic behavior of the L-H transition in the ASDEX-Upgrade tokamak is described. We focus on the periodic L-H-L transitions known as ‘‘dithering H mode’’ and show that there is an intrinsic time scale in this process which is characteristic for the L-H transition. We give a tentative explanation for the phenomenon using an extension of Itoh’s model for the L-H transition and find that this simple bifurcation model can qualitatively explain many of the experimental observations. According to our model, the dithering cycles are a limit cycle oscillation due to a difference in the response of the system to a rise in either T or n. The implications for H-mode theories are discussed.},
+	abstract = {The dynamic behavior of the L--H transition in the ASDEX-Upgrade tokamak is described. We focus on the periodic L--H--L transitions known as ‘‘dithering H mode’’ and show that there is an intrinsic time scale in this process which is characteristic for the L--H transition. We give a tentative explanation for the phenomenon using an extension of Itoh’s model for the L--H transition and find that this simple bifurcation model can qualitatively explain many of the experimental observations. According to our model, the dithering cycles are a limit cycle oscillation due to a difference in the response of the system to a rise in either T or n. The implications for H--mode theories are discussed.},
 	number = {2},
 	urldate = {2017-07-27},
 	journal = {Physical Review Letters},
@@ -268,7 +268,7 @@ the model.},
 	issn = {0741-3335},
 	url = {http://stacks.iop.org/0741-3335/42/i=1/a=201},
 	doi = {10.1088/0741-3335/42/1/201},
-	abstract = {After a general discussion of the experimental characteristics of the L-H transition and consideration of basic theoretical principles underlying models for it, this paper reviews the various theories of the L-H transition available in the literature, providing some background information on each theory and expressing the transition criteria in forms suitable for comparison with experiment. Some conclusions on the relevance of these models for explaining the experimental data on the transition are drawn.},
+	abstract = {After a general discussion of the experimental characteristics of the L--H transition and consideration of basic theoretical principles underlying models for it, this paper reviews the various theories of the L--H transition available in the literature, providing some background information on each theory and expressing the transition criteria in forms suitable for comparison with experiment. Some conclusions on the relevance of these models for explaining the experimental data on the transition are drawn.},
 	language = {en},
 	number = {1},
 	urldate = {2017-05-18},
@@ -284,7 +284,7 @@ the model.},
 	issn = {0741-3335},
 	url = {http://stacks.iop.org/0741-3335/39/i=12/a=008},
 	doi = {10.1088/0741-3335/39/12/008},
-	abstract = {Local edge parameters on the ASDEX Upgrade tokamak are investigated at the L-mode to H-mode transition, during phases with various types of edge-localized modes (ELMs), and at the density limit. A scaling law for the boundary electron temperature is found which describes the H-mode threshold for deuterium-puffed discharges with favourable ion-drift direction. The region of stable operation is bounded by type I ELMs near the ideal ballooning limit and by a minimum temperature necessary to avoid thermal instability of the plasma edge. Stationary operation with type III ELMs imposes an upper limit on the edge temperature. Within the entire range of boundary densities investigated, both L-mode and H-mode are found to be accessible. During type I ELMy H-mode, a relation of global confinement with the edge pressure gradient is found which is connected with a loss of the favourable density dependence predicted by the ITER-92P and ITER-93H ELMy H-mode scalings. At high density, better confinement is achieved in H-modes with an edge pressure gradient below the ideal ballooning limit, e.g. during type III ELMy H-mode with impurity-seeded radiation.},
+	abstract = {Local edge parameters on the ASDEX Upgrade tokamak are investigated at the L--mode to H--mode transition, during phases with various types of edge-localized modes (ELMs), and at the density limit. A scaling law for the boundary electron temperature is found which describes the H--mode threshold for deuterium-puffed discharges with favourable ion-drift direction. The region of stable operation is bounded by type I ELMs near the ideal ballooning limit and by a minimum temperature necessary to avoid thermal instability of the plasma edge. Stationary operation with type III ELMs imposes an upper limit on the edge temperature. Within the entire range of boundary densities investigated, both L--mode and H--mode are found to be accessible. During type I ELMy H--mode, a relation of global confinement with the edge pressure gradient is found which is connected with a loss of the favourable density dependence predicted by the ITER-92P and ITER-93H ELMy H--mode scalings. At high density, better confinement is achieved in H--modes with an edge pressure gradient below the ideal ballooning limit, e.g. during type III ELMy H--mode with impurity-seeded radiation.},
 	language = {en},
 	number = {12},
 	urldate = {2017-05-16},
@@ -317,7 +317,7 @@ the model.},
 	issn = {0741-3335},
 	url = {http://stacks.iop.org/0741-3335/36/i=7A/a=044},
 	doi = {10.1088/0741-3335/36/7A/044},
-	abstract = {Theoretical research into H-mode physics is reviewed. The topics cover elementary processes such as bifurcation physics, collisional transport theory and anomalous transport theory. Associated with these investigations, a global picture of H-mode phenomena, such as the spatial structure and temporal evolution has been constructed from theory. The author tries to clarify the contributions of theoretical presentations in this H-mode workshop, illustrating the relation to the overall progress on the H-mode theory.},
+	abstract = {Theoretical research into H--mode physics is reviewed. The topics cover elementary processes such as bifurcation physics, collisional transport theory and anomalous transport theory. Associated with these investigations, a global picture of H--mode phenomena, such as the spatial structure and temporal evolution has been constructed from theory. The author tries to clarify the contributions of theoretical presentations in this H--mode workshop, illustrating the relation to the overall progress on the H--mode theory.},
 	language = {en},
 	number = {7A},
 	urldate = {2017-05-15},
@@ -384,7 +384,7 @@ the model.},
 	issn = {1070-664X},
 	url = {http://aip.scitation.org/doi/10.1063/1.4871856},
 	doi = {10.1063/1.4871856},
-	abstract = {In more than three decades, a large amount of models and mechanisms have been proposed to describe a very beneficial feature of magnetically confined fusion plasmas: the L-H transition. Bifurcation theory can be used to compare these different models based on their dynamical transition structure. In this paper, we employ bifurcation theory to distinguish two fundamentally different descriptions of the interaction between turbulence levels and sheared flows. The analytic bifurcation analysis characterises the parameter space structure of the transition dynamics. Herewith, in these models three dynamically different types of transitions are characterised, sharp transitions, oscillatory transitions, and smooth transitions. One of the two models has a very robust transition structure and is therefore likely to be more accurate for such a robust phenomenon as the L-H transition. The other model needs more fine-tuning to get non-oscillatory transitions. These conclusions from the analytic bifurcation analysis are confirmed by dedicated numerical simulations, with the newly developed code Bifurcator.},
+	abstract = {In more than three decades, a large amount of models and mechanisms have been proposed to describe a very beneficial feature of magnetically confined fusion plasmas: the L--H transition. Bifurcation theory can be used to compare these different models based on their dynamical transition structure. In this paper, we employ bifurcation theory to distinguish two fundamentally different descriptions of the interaction between turbulence levels and sheared flows. The analytic bifurcation analysis characterises the parameter space structure of the transition dynamics. Herewith, in these models three dynamically different types of transitions are characterised, sharp transitions, oscillatory transitions, and smooth transitions. One of the two models has a very robust transition structure and is therefore likely to be more accurate for such a robust phenomenon as the L--H transition. The other model needs more fine-tuning to get non-oscillatory transitions. These conclusions from the analytic bifurcation analysis are confirmed by dedicated numerical simulations, with the newly developed code Bifurcator.},
 	number = {5},
 	urldate = {2017-04-25},
 	journal = {Physics of Plasmas},
@@ -405,7 +405,7 @@ the model.},
 @article{nielsen_simulation_2014,
 	title = {Simulation of transition dynamics to high confinement in fusion plasmas},
 	url = {http://arxiv.org/abs/1409.3186},
-	abstract = {The transition dynamics from the low (L) to the high (H) confinement mode in magnetically confined plasmas is investigated using a first-principles four-field fluid model. Numerical results are in close agreement with measurements from the Experimental Advanced Superconducting Tokamak - EAST. Particularly, the slow transition with an intermediate dithering phase is well reproduced by the numerical solutions. Additionally, the model reproduces the experimentally determined L-H transition power threshold scaling that the ion power threshold increases with increasing particle density. The results hold promise for developing predictive models of the transition, essential for understanding and optimizing future fusion power reactors.},
+	abstract = {The transition dynamics from the low (L) to the high (H) confinement mode in magnetically confined plasmas is investigated using a first-principles four-field fluid model. Numerical results are in close agreement with measurements from the Experimental Advanced Superconducting Tokamak - EAST. Particularly, the slow transition with an intermediate dithering phase is well reproduced by the numerical solutions. Additionally, the model reproduces the experimentally determined L--H transition power threshold scaling that the ion power threshold increases with increasing particle density. The results hold promise for developing predictive models of the transition, essential for understanding and optimizing future fusion power reactors.},
 	urldate = {2017-05-14},
 	journal = {arXiv:1409.3186 [physics]},
 	author = {Nielsen, A. H. and Xu, G. S. and Madsen, J. and Naulin, V. and Rasmussen, J. Juul and Wan, B. N.},
@@ -431,7 +431,7 @@ the model.},
 	issn = {0029-5515},
 	url = {http://stacks.iop.org/0029-5515/42/i=9/a=309},
 	doi = {10.1088/0029-5515/42/9/309},
-	abstract = {The fluid simulation of a divertor tokamak edge plasma by the B2-SOLPS5.0 transport code gives the dependence of the radial electric field on the local and global plasma parameters. The shear of the radial electric field, which is responsible for the transition to an improved confinement regime, is a linear function of a local ion temperature and the local average toroidal velocity and is inversely proportional to the toroidal magnetic field. The scaling for the L-H transition threshold agrees with the experimental H-mode scaling of ASDEX Upgrade. The radial electric field shows no bifurcation and is close to the neoclassical electric field with the toroidal rotation contribution determined by the radial anomalous transport of the toroidal momentum. The fine structure of the electric field at the separatrix and its dependence on the toroidal magnetic field inversion is analysed.},
+	abstract = {The fluid simulation of a divertor tokamak edge plasma by the B2-SOLPS5.0 transport code gives the dependence of the radial electric field on the local and global plasma parameters. The shear of the radial electric field, which is responsible for the transition to an improved confinement regime, is a linear function of a local ion temperature and the local average toroidal velocity and is inversely proportional to the toroidal magnetic field. The scaling for the L--H transition threshold agrees with the experimental H--mode scaling of ASDEX Upgrade. The radial electric field shows no bifurcation and is close to the neoclassical electric field with the toroidal rotation contribution determined by the radial anomalous transport of the toroidal momentum. The fine structure of the electric field at the separatrix and its dependence on the toroidal magnetic field inversion is analysed.},
 	language = {en},
 	number = {9},
 	urldate = {2017-05-08},
@@ -497,14 +497,14 @@ the model.},
 
 @article{toda_condensed_neutrals_1997,
   author={S Toda and S-I Itoh and M Yagi and Y Miura},
-  title={A theoretical model of H-mode transition triggered by condensed neutrals near X-point},
+  title={A theoretical model of H--mode transition triggered by condensed neutrals near X-point},
   journal={Plasma Physics and Controlled Fusion},
   volume={39},
   number={2},
   pages={301},
   url={http://stacks.iop.org/0741-3335/39/i=2/a=007},
   year={1997},
-  abstract={The effects of neutrals near the X-point of tokamaks on the L/H transition are examined. Four mechanisms for bipolar losses, i.e. the loss cone loss, the bulk viscosity loss, the charge-exchange (CX) loss between ions and neutrals and the anomalous loss, occur simultaneously in high-temperature plasmas. Neutral particles near the X-point are found to trigger the H-mode transition. They cause an additional ion loss cone loss via collisions. The lower limit of the neutral density near the X-point for the onset of the H-mode transition is estimated. Neutral particles at the main plasma are shown to prevent the H-mode transition because of CX loss.}
+  abstract={The effects of neutrals near the X-point of tokamaks on the L/H transition are examined. Four mechanisms for bipolar losses, i.e. the loss cone loss, the bulk viscosity loss, the charge-exchange (CX) loss between ions and neutrals and the anomalous loss, occur simultaneously in high-temperature plasmas. Neutral particles near the X-point are found to trigger the H--mode transition. They cause an additional ion loss cone loss via collisions. The lower limit of the neutral density near the X-point for the onset of the H--mode transition is estimated. Neutral particles at the main plasma are shown to prevent the H--mode transition because of CX loss.}
 }
 
 @article{chankin_loss_1993,
