--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -118,7 +118,7 @@ The first dictates hysteresis being present in the system; varying this allows f
 Varying the second parameter can cause the two stable solutions to be replaced by with unstable solutions, in which the system will oscillate between the solutions.
 This phenomenon is called limit cycle oscillations; it is a result of a Hopf bifurcation \cite{weymiens_bifurcation_2014}.
 
-\section{Mechanisms}
+\section{Mechanisms}\label{sec:mechanics}
 Physically, the transition is a bifurcation in the turbulent transport at the edge of the tokamak.
 The prevailing hypothesis for the overarching mechanism for H--mode is that high auxiliary power develops strong sheared plasma flow and suppresses transport \cite{freidberg_plasma_2007}.
 
@@ -135,7 +135,7 @@ In the above, $e_j$ represents the charge of the $j$-th species, $n_j$ is the de
 This grants changes in the radial electric field to be associated with changes in radial gradient of the pressure or either velocities \cite{connor_review_2000}\cite{staps_backstepping_2017}.
 However, determining these values is difficult due to large possible error in experiment.
 
-\section{Research Questions}
+\section{Research Questions}\label{sec:research_questions}
 Although there have been compilations of different theories describing the transition, there is yet to be a conclusive, comprehensive one \cite{connor_review_2000}.
 There is substantial evidence, both theoretically and experimentally, that a radial electric field is an integral piece in the forming and enforcing of H--mode.
 Many of the effects in generating and suppressing the field show up as additive terms in an equation for a radial displacement current.
