Much progress. Currently 2 eqs and 1 eq sections

--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -105,8 +105,8 @@ Work by Weymiens proves that the ``co-dimension 3 bifurcation robustly connects 
 The following is the aforementioned model
 \begin{subequations}
 \begin{align}
-	\dot{x} \,=\, a - bx - x^3 + cy \\
-	\dot{y} \,=\, -y - x
+	\dot{x} \,&=\, a - bx - x^3 + cy \\
+	\dot{y} \,&=\, -y - x
 \end{align}
 \end{subequations}
 
