--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -113,8 +113,8 @@
 
 \clearemptydoublepage
 
-\chapter{Background}\label{chapter:background}
-\input{Background/Background.tex}
+\chapter{Model}\label{chapter:model}
+\input{Model/Model.tex}
 
 
 \clearemptydoublepage
